# proj.city

./: .bettercodehub.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md  appveyor.yml  circle.yml
ci/: before_build.sh  init.ps1  install.sh
cmake/: compilers.cmake  dependencies.cmake
cmake/modules/: FindImagine.cmake  FindLib3ds.cmake  catch.cmake  docopt.cmake  easyloggingpp.cmake  find_lib3ds.cmake  free3ds.cmake  imagine++.cmake
confs/: default_conf.conf
ressources/patch_gdal-2.1.3/: jpeg2000_vsil_io.patch
ressources/tests/: building_sum_mesh.off  hammerhead.off  hammerhead_shadow_mesh.txt  obj_minimal.txt  obj_scene.txt  obj_two.txt  santa_shadow_mesh.txt  staff.off  staff_unstitched.off
src/: config.h.in  geometry_definitions.h  main.cpp  main3dslite.cpp
src/3dslite/: lib3dslite.h
src/Algorithms/: algorithms.h  brick_algorithms.cpp  brick_algorithms.h  projection_algorithms.cpp  projection_algorithms.h  util_algorithms.h
src/IO/: io.h  io_3ds.cpp  io_3ds.h  io_off.cpp  io_off.h
src/Projection/: brick_projection.cpp  brick_projection.h  camera.cpp  camera.h  face_projection.cpp  face_projection.h
src/Samples/: hello_santa.cpp  hi_santa.cpp  project_santa.cpp  project_santa_xy.cpp
src/Shadow/: mesh.h
src/ShadowMesh/: shadow_mesh.cpp  shadow_mesh.h
src/Tests/: test_face.cpp  test_io_3ds.cpp  test_io_off.cpp  test_mesh.cpp  test_shadow_mesh.cpp  test_triangle.cpp  test_urban_object.cpp
src/UObjects/: surface_builder.h  urban_objects.cpp  urban_objects.h
src/UrbanObject/: brick.cpp  brick.h  geometry_definitions.h  surface_builder.h  urban_object.cpp  urban_object.h
src/cli/: CMakeLists.txt  arguments.h  project_scene_xy.cpp
src/include/: city.h  (+4 more)
src/lib/: CMakeLists.txt  city.cpp  urban.cpp
src/lib/algorithms/: io_algorithms.cpp  scene_algorithms.cpp  test_utils.cpp  unode_algorithms.cpp  util_algorithms.cpp
src/lib/algorithms/scene/: unode_algorithms.cpp
src/lib/algorithms/utils/: util_algorithms.h
src/lib/io/: io.cpp  io_3ds.cpp  io_gdal.cpp  io_gdal.h  io_obj.cpp  io_off.cpp  io_raster.cpp  io_scene.cpp  io_scene_tree.cpp  io_vector.cpp
src/lib/io/Adjacency_stream/: adjacency_stream.h
src/lib/projection/: brick_projection.cpp  camera.cpp  face_projection.cpp  raster_projection.cpp  scene_projection.cpp  utilities.cpp
src/lib/projection/raster/: raster_projection.cpp
src/lib/scene/: scene.cpp  unode.cpp  utilities.cpp
src/lib/shadow/: bbox.cpp  face.cpp  mesh.cpp  point.cpp  utilities.cpp  vector.cpp
src/lib/shadow/Bbox/: bbox.cpp
src/lib/shadow/Point/: point.cpp  point.h
src/lib/shadow/Vector/: vector.cpp
src/libs/: CMakeLists.txt  geometry_definitions.h  urban.h
src/libs/Algorithms/: algorithms.h  brick_algorithms.cpp  brick_algorithms.h  ogr_algorithms.cpp  ogr_algorithms.h  projection_algorithms.cpp  projection_algorithms.h  shadow_algorithms.cpp  shadow_algorithms.h  util_algorithms.cpp  util_algorithms.h
src/libs/Algorithms/Brick/: brick_algorithms.cpp  brick_algorithms.h
src/libs/Algorithms/Ogr/: ogr_algorithms.cpp  ogr_algorithms.h
src/libs/Algorithms/Projection/: projection_algorithms.cpp  projection_algorithms.h
src/libs/Algorithms/Shadow/: shadow_algorithms.h
src/libs/Algorithms/Utils/: util_algorithms.cpp  util_algorithms.h
src/libs/IO/: io.h  io_3ds.cpp  io_3ds.h  io_gdal.cpp  io_gdal.h  io_off.cpp  io_off.h
src/libs/Projection/: projection.h
src/libs/Projection/Brick/: brick_projection.cpp  brick_projection.h
src/libs/Projection/Camera/: camera.cpp  camera.h
src/libs/Projection/Face/: face_projection.cpp  face_projection.h
src/libs/Shadow/: mesh.cpp  mesh.h
src/libs/Shadow/Bbox/: bbox.cpp  bbox.h
src/libs/Shadow/Face/: face.cpp  face.h
src/libs/Shadow/Point/: point.cpp  point.h
src/libs/Shadow/Vector/: vector.cpp  vector.h
src/libs/UrbanObject/: brick.cpp  brick.h  surface_builder.h
src/libs/algorithms/: algorithms.h
src/libs/algorithms/Brick/: brick_algorithms.cpp  brick_algorithms.h
src/libs/algorithms/brick/: brick_algorithms.cpp  brick_algorithms.h
src/libs/algorithms/building/: building_algorithms.cpp  building_algorithms.h
src/libs/algorithms/ogr/: ogr_algorithms.cpp  ogr_algorithms.h
src/libs/algorithms/projection/: projection_algorithms.cpp  projection_algorithms.h
src/libs/algorithms/raster/: raster_algorithms.cpp  raster_algorithms.h
src/libs/algorithms/scene/: unode_algorithms.h
src/libs/algorithms/shadow/: shadow_algorithms.cpp  shadow_algorithms.h
src/libs/algorithms/utils/: util_algorithms.cpp  util_algorithms.h
src/libs/brick/: brick.cpp  brick.h  surface_builder.h
src/libs/io/: io.h  io_3ds.cpp  io_3ds.h  io_gdal.cpp  io_gdal.h  io_off.cpp  io_off.h  io_scene.cpp  io_scene.h
src/libs/io/Adjacency_stream/: adjacency_stream.h
src/libs/io/Line/: line.cpp  line.h
src/libs/io/Off_stream/: off_stream.h
src/libs/projection/: projection.h
src/libs/projection/Brick/: brick_projection.cpp  brick_projection.h
src/libs/projection/Camera/: camera.cpp  camera.h
src/libs/projection/Face/: face_projection.cpp  face_projection.h
src/libs/projection/Raster/: raster_projection.cpp  raster_projection.h
src/libs/projection/camera/: camera.cpp
src/libs/projection/face/: face_projection.cpp  face_projection.h
src/libs/projection/raster/: raster_projection.cpp  raster_projection.h
src/libs/projection/scene/: brick_projection.cpp  brick_projection.h  scene_projection.cpp  scene_projection.h  utils.h
src/libs/scene/: building.cpp  building.h  ground.h  scene.cpp  scene.h  unode.cpp  unode.h
src/libs/scene/brick/: brick.cpp  brick.h  surface_builder.h
src/libs/shadow/: mesh.cpp  mesh.h
src/libs/shadow/Bbox/: bbox.cpp  bbox.h
src/libs/shadow/Face/: face.cpp  face.h  utils.h
src/libs/shadow/Geometry/: cartesian_coordinates.cpp  cartesian_coordinates.h  point.cpp  point.h  vector.cpp  vector.h
src/libs/shadow/Point/: point.cpp  point.h
src/libs/shadow/Vector/: vector.cpp  vector.h
src/libs/unit/: unit.cpp  unit.h
src/samples/: CMakeLists.txt  hello_santa.cpp  project_santa_xy.cpp
(+85 files in other folders)
